# recurrences-grpc

./: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
proto/: recurrence_rule.proto
src/: main.rs  rrule_builder.rs  server.rs
src/rrule_builder/: parser.rs
